--- a/stylemenu.css
+++ b/stylemenu.css
@@ -51,10 +51,14 @@ body {
 /* Header - Fixed */
 .header {
     background: var(--accent-color);
-    padding: 15px 20px 10px;
+    padding-top: 15px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 5px;
     position: sticky;
     top: 0;
     z-index: 100;
+    border-bottom: #4B2E2A 1px solid;
 }
 
 .header-top {
@@ -105,6 +109,9 @@ body {
     white-space: nowrap;
     cursor: pointer;
     transition: color 0.3s;
+    border-radius: 23%;
+    border:#4B2E2A 1px solid;
+    padding: 5px 15px;
 }
 
 .category.active {
