--- a/stylemenu.css
+++ b/stylemenu.css
@@ -84,6 +84,12 @@ body {
     justify-content: center;
     color: white;
     font-size: 14px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.user-icon:hover {
+    opacity: 0.8;
 }
 
 /* Categories - Horizontal Scroll, Fixed */
@@ -157,6 +163,13 @@ body {
 .item-price {
     font-size: 14px;
     color: var(--primary-color);
+}
+
+.item-desc {
+    font-size: 11px;
+    color: var(--secondary-color);
+    margin-top: 5px;
+    line-height: 1.3;
 }
 
 .item-image {
